--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,7 +7,7 @@ footer {
 	flex-direction: column;
 	align-items: center;
 
-	h5 {
+	h6 {
 		padding: 1rem;
 		text-align: center;
 	}
