--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -121,19 +121,44 @@
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
-    height: 110vh;
-    margin-top:-2rem;
-    background-color: $black;
-    opacity: .9;
-    transform: translateZ(125px) rotateX(0) rotateY(0);
+    background-color: transparent;
     z-index: 40;
+    align-items: flex-end;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+    button {
+        margin: 0;
+        margin-right: 1rem;
+        background-color: $black;
+        border-radius: 50%;
+        padding: .5rem;
+        color: $neon-pink;
+        position: absolute;
+        top: -1rem;
+        left: -1rem;
+        height: 2rem;
+        width: 2rem;
+        font-size: 1rem;
+        border: .2rem solid $neon-pink;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     p {
-        width: 50%;
+        width: 80%;
+        max-width: 25rem;
+        text-align: right;
+        line-height: 1.2;
+        padding: .5rem;
+        margin: 1rem;
+        border-radius: .5rem;
+        background-color: $black;
+        opacity: .9;
+        position: relative;
+        border: .2rem dotted $neon-pink;
     }
 }
 
